[package]
name = "sushi-gen"
description="A simple but customizable static site generator / blog generator"
version = "0.2.9"
edition = "2021"
license = "LGPL-3.0"
keywords = ["static", "site", "generator", "blog"]
categories = ["command-line-utilities"]
repository = "https://github.com/fpg2012/sushi"
authors = ["nth233 (nth233@outlook.com)"]
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name="ssushi"
path="src/main.rs"

[dependencies]
liquid = "0.26.4"
serde = "1.0"
serde_yaml = "0.9.30"
subprocess = "0.2.9"
lazy_static = "1.4.0"
itertools = "0.12.0"
log = "0.4.20"
clap = { version = "4.4.18", features = ["derive"] }
chrono = "0.4.31"
directories = "5.0.1"
regex = "1.10.2"
fs_extra = "1.3.0"
shadow-rs = { version = "0.37.0", features = ["metadata"]}

[dependencies.simple_logger]
version = "4.3.3"
default-features = false
features = ["colors"]

[build-dependencies]
shadow-rs = "0.37.0"
