[package]
name = "sushi-gen"
description="A simple but customizable static site generator / blog generator"
version = "0.2.11"
edition = "2021"
license = "LGPL-3.0"
keywords = ["static", "site", "generator", "blog"]
categories = ["command-line-utilities"]
repository = "https://github.com/fpg2012/sushi"
authors = ["nth233 (nth233@outlook.com)"]
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true
strip = true
opt-level = 2

[[bin]]
name = "ssushi"
path = "src/main.rs"

[[bin]]
name = "pmd_event_view"
path = "src/tools/pmd_event_view.rs"

[dependencies]
liquid = "0.26.11"
serde = "1.0"
serde_yaml = "0.9.34"
subprocess = "0.2.9"
lazy_static = "1.5.0"
itertools = "0.14.0"
log = "0.4.28"
clap = { version = "4.5.47", features = ["derive"] }
chrono = "0.4.41"
directories = "6.0.0"
regex = "1.11.2"
fs_extra = "1.3.0"
shadow-rs = { version = "0.37.0", features = ["metadata"]}
toml = "0.9.5"
pulldown-cmark = "0.13.0"
katex = "0.4.6"
syntect = { version = "5.2.0" }

[dependencies.simple_logger]
version = "5.0.0"
default-features = false
features = ["colors"]

[build-dependencies]
shadow-rs = "0.37.0"
